--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Hello World!</h1>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores beatae nam, consectetur officia eius fuga voluptatibus saepe dolorum tempora ex perspiciatis quis velit error debitis nihil aspernatur fugiat neque ducimus.</p>
 </body>
 </html>
